--- a/app/views/repos/show.erb
+++ b/app/views/repos/show.erb
@@ -1,3 +1,1 @@
-<%= react_component "RepoFetcher", url: "/repos/#{@repo.name}" %>
-
-<%= react_component "BuildsCollection", url: "/repos/#{@repo.name}/builds" %>
+<%= react_component "ShowRepo" , name: @repo.name %>
