--- a/config/deploy/templates/nginx_conf.erb
+++ b/config/deploy/templates/nginx_conf.erb
@@ -31,6 +31,9 @@ server {
   client_max_body_size 4G;
   keepalive_timeout 10;
 
+  # prevents 502 bad gateway error
+  large_client_header_buffers 8 32k;
+
   error_page 500 502 504 /500.html;
   error_page 503 @503;
 
@@ -63,6 +66,14 @@ server {
 
   location = /404.html {
     root html;
+  }
+
+  # enables WS support
+  location /cable {
+    proxy_pass http://puma_<%= fetch(:nginx_config_name) %>;
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection "upgrade";
   }
 
   location @503 {
