--- a/app/views/layouts/session.html.erb
+++ b/app/views/layouts/session.html.erb
@@ -40,7 +40,7 @@
         -->
       </div>
       <div class="mdl-card__actions mdl-card--border">
-        <%= link_to "Sign in with Github", user_omniauth_authorize_path(:github), class: "mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" %>
+        <%= link_to "Sign in with Github", user_github_omniauth_authorize_path, class: "mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" %>
       </div>
     </div>
   </main>
