--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,9 @@
   <div class="mdl-layout mdl-js-layout mdl-layout--fixed-drawer">
     
     <div class="mdl-layout__drawer">
-      <span class="mdl-layout-title">PerkinsCI</span>
+      <!--
+      <span class="mdl-layout-title">Welcome</span>
+      -->
       <%= render "shared/side_nav" %>
     </div>
 
