--- a/app/views/shared/_side_nav.erb
+++ b/app/views/shared/_side_nav.erb
@@ -2,8 +2,8 @@
   
   <div class="mdl-tabs">
     <div class="mdl-tabs__tab-bar">
-        <a href="#myrepos" class="mdl-tabs__tab is-active">
-          Repos
+        <a href="/profile" class="mdl-tabs__tab is-active">
+          Account repos
         </a>
         <a href="/profile" class="mdl-tabs__tab">
           +
